# cpp-init

./: .clang-tidy  CMakeLists.txt  README.md
data/: about.md
docs/: about.md
include/: about.md
include/cpp-init/: about.md  example.h
modules/: about.md
resources/: about.md
sources/: about.md  main.cpp
sources/cpp-init/: about.md  example.cpp
tests/: CMakeLists.txt  about.md  test_example.cpp
